--- a/JavaEE/pom.xml
+++ b/JavaEE/pom.xml
@@ -21,6 +21,7 @@
     <modules>
         <module>JSFHelloWorld</module>
         <module>PFHelloWorld</module>
+        <module>BFPoll</module>
     </modules>
 
     <dependencyManagement>
@@ -54,6 +55,13 @@
                 <groupId>org.primefaces.themes</groupId>
                 <artifactId>all-themes</artifactId>
                 <version>1.1.0</version>
+            </dependency>
+
+            <!-- Bootsfaces -->
+            <dependency>
+                <groupId>net.bootsfaces</groupId>
+                <artifactId>bootsfaces</artifactId>
+                <version>2.0.1</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
