--- a/JavaEE/pom.xml
+++ b/JavaEE/pom.xml
@@ -23,6 +23,7 @@
         <module>PFHelloWorld</module>
         <module>BFPoll</module>
         <module>Async</module>
+        <module>Services</module>
     </modules>
 
     <dependencyManagement>
@@ -53,6 +54,25 @@
                 <groupId>jakarta.enterprise.concurrent</groupId>
                 <artifactId>jakarta.enterprise.concurrent-api</artifactId>
                 <version>3.1.1</version>
+            </dependency>
+
+            <!--Persistence-->
+            <dependency>
+                <groupId>jakarta.persistence</groupId>
+                <artifactId>jakarta.persistence-api</artifactId>
+                <version>3.2.0</version>
+            </dependency>
+            <dependency>
+                <groupId>jakarta.transaction</groupId>
+                <artifactId>jakarta.transaction-api</artifactId>
+                <version>2.0.1</version>
+            </dependency>
+
+            <!--JAX-RS-->
+            <dependency>
+                <groupId>jakarta.ws.rs</groupId>
+                <artifactId>jakarta.ws.rs-api</artifactId>
+                <version>4.0.0</version>
             </dependency>
 
             <!-- Primefaces -->
