--- a/JavaEE/Services/ServiceRestApi/pom.xml
+++ b/JavaEE/Services/ServiceRestApi/pom.xml
@@ -33,6 +33,13 @@
             <groupId>jakarta.ws.rs</groupId>
             <artifactId>jakarta.ws.rs-api</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>jakarta.validation</groupId>
+            <artifactId>jakarta.validation-api</artifactId>
+            <version>3.1.1</version>
+        </dependency>
+
     </dependencies>
 
     <build>
