--- a/Spring/Async/pom.xml
+++ b/Spring/Async/pom.xml
@@ -3,29 +3,19 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.7.5</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<groupId>ru.develgame.code-lab</groupId>
+		<artifactId>spring</artifactId>
+		<version>1.0.0</version>
 	</parent>
-	<groupId>ru.develgame</groupId>
-	<artifactId>springasync</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>springasync</name>
-	<description>Demo project for Spring Boot</description>
-	<properties>
-		<java.version>11</java.version>
-	</properties>
+
+	<groupId>ru.develgame.codelab.spring</groupId>
+	<artifactId>spring-async</artifactId>
+	<version>1.0.0</version>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
@@ -37,5 +27,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
